crates/uitest/fixtures/ty_check/const_hole_trait_impl_param_explicit_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/const_hole_trait_impl_param_explicit_mismatch.fe
---
error[6-0003]: method type parameter count mismatch
   ┌─ const_hole_trait_impl_param_explicit_mismatch.fe:10:8
   │
10 │     fn f<const ROOT: u256>(x: Slot<u256, ROOT>) {}
   │        ^ expected 0 type parameters, but 1 given
